<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/login_intro"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:layout_weight="1"
                style="@style/immopolyHeading1"
                android:text="@string/user_signup_app_name"
                android:textSize="34dp" />
            <ProgressBar
                android:id="@+id/login_progress"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="registerUser"
                android:text="@string/register_short"
                style="@style/immopolyButton"
                android:textSize="20dip" />
        </LinearLayout>
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:imeOptions="actionNext"
            android:singleLine="true" >
        </EditText>
        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>
        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_hint_login"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="loginUser"
            android:text="@string/login"
            style="@style/immopolyButton"            
            android:textSize="20dip" />
        <Button
            android:id="@+id/forgot_password"
            style="@style/immopolyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="recoverPassword"
            android:text="@string/forgot_passwd"
            android:textSize="20dip" />
    </LinearLayout>
</ScrollView>