<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This is the Android component of Immopoly
  ~ http://immopoly.appspot.com
  ~ Copyright (C) 2011 Tobias Sasse
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. If not, see http://www.gnu.org/licenses/.
  -->

<searchable xmlns:android="http://schemas.android.com/apk/res/android"
	android:label="@string/app_name" 
	android:hint="@string/region_hint"
	android:imeOptions="actionNone"
	android:searchButtonText="Schliesen"
	android:searchSettingsDescription="@string/settings_description"
	android:searchSuggestAuthority="de.tosa.findaflat.provider.region_provider"
	android:searchSuggestIntentAction="android.intent.action.VIEW"
    android:searchSuggestIntentData="content://de.tosa.findaflat/region"
	android:searchSuggestSelection=" ?" 
	android:searchSuggestThreshold="1"
	android:searchSuggestPath="region">
</searchable>
