<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:shrinkColumns="0" >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_cost_text"
            android:textColor="#333"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/current_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="915€"
            android:textColor="#333"
            android:textSize="15dp" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/last_provision_text"
            android:textColor="#333"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/last_provision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="382€"
            android:textColor="#333"
            android:textSize="15dp" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/calculated_cost_text"
            android:textColor="#333"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/calculated_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="5.722€"
            android:textColor="#333"
            android:textSize="15dp" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/current_ballance_text"
            android:textColor="#333"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="912.324€"
            android:textColor="#333"
            android:textSize="15dp" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/num_flats_text"
            android:textColor="#333"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/num_flats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="11 / 30"
            android:textColor="#333"
            android:textSize="15dp" />
    </TableRow>
</TableLayout>
