<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This is the Android component of Immopoly
  ~ http://immopoly.appspot.com
  ~ Copyright (C) 2011 Tobias Sasse 
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program. If not, see http://www.gnu.org/licenses/.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="10dip" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/bank"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/user_cash"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/dash"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/rent"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/last_rent"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/dash"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/provision"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/last_provision"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="4dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/dash"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!--
				<TextView android:id="@+id/user_cash_change" android:text="+ 100 €"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textSize="20dp"
				android:layout_margin="4dip" />
            -->
            <Button
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:background="@drawable/ic_history_button"
                android:onClick="showHistory" />
            <Button
                android:id="@+id/add_new_item"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_gravity="right"
                android:background="@drawable/ic_map_button"
                android:onClick="handleMapClick" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/list_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dip"
        android:text="@string/portfolio"
        android:textColor="#ffbc38"
        android:textSize="22dp"
        android:textStyle="bold" />
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dip"
        android:fastScrollEnabled="true" />
</LinearLayout>